--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
+    "camelcase-keys": "^10.0.1",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
