--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
-    "build": "next build",
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "next lint"
   },
@@ -12,6 +12,7 @@
     "schema": "_lib/prisma/schema.prisma"
   },
   "dependencies": {
+    "@auth/core": "^0.34.3",
     "@hookform/resolvers": "^5.1.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.16.2",
@@ -27,11 +28,11 @@
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
-    "next": "15.4.6",
-    "next-auth": "^4.24.13",
+    "next": "16.0.8",
+    "next-auth": "5.0.0-beta.30",
     "pg": "^8.16.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.1.2",
+    "react-dom": "19.1.2",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.61.0",
     "react-icons": "^5.5.0",
