--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.16.2",
     "@tanstack/react-query": "^5.90.5",
+    "@tanstack/react-query-devtools": "^5.91.1",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "camelcase-keys": "^10.0.1",
