--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
+    "nanoid": "^5.1.6",
     "next": "16.0.10",
     "next-auth": "5.0.0-beta.30",
     "pg": "^8.16.3",
