--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -46,7 +46,8 @@
     "react-toastify": "11.0.3",
     "sharp": "^0.34.4",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.0.8"
+    "zod": "^4.0.8",
+    "vercel-build": "prisma generate && next build"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
