--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "react-toastify": "11.0.3",
     "sharp": "^0.34.4",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.0.8",
-    "vercel-build": "prisma generate && next build"
+    "zod": "^4.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
