--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "vercel-build": "prisma generate --schema=_lib/prisma/schema.prisma && next build",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
